# JimmyNeuron

./: .gitignore  CMakeLists.txt  Jimmy_VSC.code-workspace  LICENSE.md  README.md  Sieć neuronowa - Koniec projektu.odp  Sieć neuronowa.odp
include/JimmyNeuron/: Jimmy.hpp
include/JimmyNeuron/Experimental/LameNetwork/: LameNetwork.hpp  LameWeightMatrix.hpp  LameWeightVector.hpp
include/JimmyNeuron/Experimental/UnifiedNetwork/: NeuronCluster.hpp
include/JimmyNeuron/Games/: BeeGame.hpp  TicTacToe.hpp
include/JimmyNeuron/Misc/: Misc.hpp
include/JimmyNeuron/Network/: Critic.hpp  Layer.hpp  LoopingNet.hpp  LoopingNet.inl  LoopingNeuron.hpp  LossFunction.hpp  Methods.hpp  Net.hpp  Neuron.hpp  RecordsIO.hpp  TransferFunction.hpp
src/: CMakeLists.txt  Jimmy.cpp
src/Experimental/LameNetwork/: LameNetwork.cpp  LameWeightMatrix.cpp  LameWeightVector.cpp
src/Games/: BeeGame.cpp  CMakeLists.txt  DinoGame.cpp  DinoGame.hpp  TicTacToe.cpp  TicTacToe.hpp
src/JimmyNeuron/: CMakeLists.txt  Jimmy.cpp  Jimmy.hpp
src/JimmyNeuron/Misc/: Misc.cpp  Misc.hpp
src/JimmyNeuron/Network/: Critic.cpp  Critic.hpp  Layer.cpp  Layer.hpp  LossFunction.cpp  LossFunction.hpp  Methods.cpp  Methods.hpp  Network.cpp  Network.hpp  Network_Critic.cpp  Neuron.cpp  Neuron.hpp  RecordsIO.cpp  RecordsIO.hpp  TransferFunction.cpp  TransferFunction.hpp  TransformationFunction.cpp  TransformationFunction.hpp
src/Misc/: Misc.cpp
src/Network/: Critic.cpp  Layer.cpp  LoopingNet.cpp  LoopingNeuron.cpp  LossFunction.cpp  Methods.cpp  Net.cpp  Neuron.cpp  RecordsIO.cpp  TransferFunction.cpp
